update netflix page

--- a/u3-d8/src/App.css
+++ b/u3-d8/src/App.css
@@ -36,3 +36,89 @@
     transform: rotate(360deg);
   }
 }
+body {
+  background-color: rgb(44, 44, 44) !important;
+  color: white;
+  animation: 3s ease-out 0s 1 fadedOpacity;
+}
+.navbar .form-inline {
+  color: white;
+}
+.form-inline div {
+  font-size: 1.1rem;
+}
+.form-inline {
+  gap: 12px;
+}
+.section-one-container {
+  display: flex;
+  align-items:center;
+  color: white;
+  margin-top: 50px;
+}
+.section-one-container .genres {
+  margin-right: auto;
+  margin-left: 50px;
+  border: 2px solid white;
+  background-color: #343a40;
+  padding: 8px;
+}
+.genres {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.section-one-container svg {
+  border: 1px solid white;
+  padding: 2px;
+}
+img {
+  margin-top: 5px !important;
+  width: 100% !important;
+  object-fit: cover !important;
+  
+}
+footer {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 150px;
+}
+footer .icons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+footer .paragraph-div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  line-height: 2.1rem;
+}
+footer span {
+  border: 1px solid white;
+  padding: 8px;
+}
+footer .paragraph-div div {
+  min-width: 120px;
+}
+@keyframes fadedOpacity {
+  0% {
+   opacity: 0;
+      }
+  100% {
+   opacity: 1;
+      }
+}
+.card {
+  width: 100% !important;
+ 
+  margin-top: 50px;
+}
+h1 {
+  color: white;
+  text-align: center;
+  margin-top: 25px !important;
+}
+hr {
+  border: 1px solid white !important;
+}
